--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "seed": "node seeds/index.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
     "connect-session-sequelize": "^7.1.4",
